--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 [metadata]
 name = forgedata
-version = 1.0.0
+version = 1.0.1
 author = Soumit Das
 author_email = its.soumit.das@gmail.com
 description = A Python package for generating random dummy data for testing purposes.
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/ITSSOUMIT
+url = https://github.com/ITSSOUMIT/ForgeData
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
